compiler/tests/compiler/must_fail/t_04.mil
extern fn test() {
  x[i] : inline bool;
}

/*
START:CMD
ARG="print[input]"
END:CMD
*/
